Refactored models and client

--- a/res/layout/activity_compose.xml
+++ b/res/layout/activity_compose.xml
@@ -15,8 +15,7 @@
             android:id="@+id/ivPicture"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:contentDescription="@string/user_picture"
-            android:src="@drawable/ic_action_person" />
+            android:contentDescription="@string/user_picture" />
 
         <TextView
             android:id="@+id/tvHandle"
