--- a/res/layout/activity_timeline.xml
+++ b/res/layout/activity_timeline.xml
@@ -1,15 +1,9 @@
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<FrameLayout    
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/fragmentContainer"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".TimelineActivity" >
-
-    <ListView
-        android:id="@+id/lvTweets"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentTop="true" >
-    </ListView>
-
-</RelativeLayout>
+    android:layout_alignParentLeft="true"
+    android:layout_alignParentTop="true"
+    tools:context=".TimelineActivity" />
