--- a/res/menu/timeline.xml
+++ b/res/menu/timeline.xml
@@ -2,18 +2,24 @@
 
     <item
         android:id="@+id/action_refresh"
-        android:showAsAction="ifRoom|withText"
-        android:orderInCategory="100"
-        android:title="@string/action_refresh"
+        android:icon="@drawable/ic_action_refresh"
         android:onClick="refresh"
-        android:icon="@drawable/ic_action_refresh" />
-    
+        android:orderInCategory="100"
+        android:showAsAction="ifRoom|withText"
+        android:title="@string/action_refresh"/>
     <item
         android:id="@+id/action_compose"
-        android:showAsAction="ifRoom|withText"
-        android:orderInCategory="200"
-        android:title="@string/action_compose"
+        android:icon="@drawable/ic_action_new_email"
         android:onClick="composeTweet"
-        android:icon="@drawable/ic_action_new_email" />
+        android:orderInCategory="200"
+        android:showAsAction="ifRoom|withText"
+        android:title="@string/action_compose"/>
+    <item
+        android:id="@+id/action_profile"
+        android:icon="@drawable/ic_profile"
+        android:onClick="onProfileView"
+        android:orderInCategory="300"
+        android:showAsAction="ifRoom|withText"
+        android:title="@string/action_profile"/>
 
 </menu>
