--- a/res/layout/activity_profile.xml
+++ b/res/layout/activity_profile.xml
@@ -62,14 +62,12 @@
                 
     </RelativeLayout>
 
-    <fragment
-        android:id="@+id/fragmentUserTimeline"
-        android:name="com.boes.tweedybird.fragments.UserTimelineFragment"
-        android:layout_width="wrap_content"
+    <FrameLayout
+        android:id="@+id/container"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_below="@+id/header"
         android:layout_alignParentBottom="true"
-        android:layout_alignParentLeft="true"
-        tools:layout="@layout/fragment_tweets_list" />
-
+        android:layout_alignParentLeft="true" />
+    
 </RelativeLayout>
